# RUST_TASK_New

./: .gitignore
chat-app/: Cargo.toml
exercise-1/: Cargo.toml  priceDetails.txt
exercise-1/src/: main.rs  my_module.rs
exercise-2/: Cargo.toml  clientAggregationData.txt  priceDetails.txt
exercise-2/src/: main.rs  my_module.rs
exercise-3/: Cargo.toml  clientAggregationData.txt  client_prices.txt  priceDetails.txt  test.rs
exercise-3-re/: Cargo.toml  priceDetails.txt
exercise-3-re/src/: my_module.rs
exercise-3/src/: library.rs  main.rs  my_module.rs
libp2p/: Cargo.toml
rust_cli/: Cargo.toml
test/: cd
todo-cli/: Cargo.toml
todo-cli/src/: lib.rs  main.rs
