[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.0.0"
futures-util = { version = "0.3.30", features = ["sink"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
ed25519-dalek={ version = "1.0.1" }
rand_core="0.5.0"
hex="0.4.3"
bincode = "1.3.3"
tokio-websockets = { version = "0.7.0",features = ["client", "fastrand", "server", "sha1_smol"]}